alignment fix

--- a/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
+++ b/src/app/learner/pages/learner-new-my-course/learner-new-my-course.component.scss
@@ -279,7 +279,7 @@
       flex-wrap: wrap;
       background-color: #ffffff;
       padding: 15px;
-      margin: 0px 0px 15px 0px;
+      margin: 15px 0px 15px 0px;
       border-radius: 4px;
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     }
@@ -510,6 +510,9 @@
         width: 39%;
         @media only screen and (min-width: 720px) {
           width: 26%;
+        }
+        @media only screen and (min-width: 1140px) {
+          width: 20%;
         }
       }
     }
